Follow TOP lesson and fetch cat GIF

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	</head>
 	<body>
 		<header>
-			<h1>logoLogo</h1>
+			<h1>FetchAPI</h1>
 			<nav>
 				<ul>
 					<li>Pricing</li>
@@ -33,7 +33,7 @@
 				</ul>
 			</nav>
 		</header>
-		<main>Main</main>
+		<main><img src="#" /></main>
 		<footer>
 			<p>
 				Created by
