Create button that fetches new cat GIF w/o refreshing page

--- a/index.html
+++ b/index.html
@@ -26,11 +26,9 @@
 		<header>
 			<h1>FetchAPI</h1>
 			<nav>
-				<ul>
-					<li>Pricing</li>
-					<li>Contact</li>
-					<li class="nav-cta">Learn More</li>
-				</ul>
+				<button class="nav-cta" onclick="fetchCatGif()">
+					Give me Cat
+				</button>
 			</nav>
 		</header>
 		<main><img src="#" /></main>
