Allow user to search for their own GIF

--- a/index.html
+++ b/index.html
@@ -26,8 +26,13 @@
 		<header>
 			<h1>FetchAPI</h1>
 			<nav>
-				<button class="nav-cta" onclick="fetchCatGif()">
-					Give me Cat
+				<input type="text" name="gif-search-bar" id="gif-search-bar" />
+				<button
+					class="nav-cta"
+					for="gif-search-bar"
+					onclick="searchGif()"
+				>
+					GIF Me
 				</button>
 			</nav>
 		</header>
